--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">Harshana Jayasekara</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">Project</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">Flutter Project</a></li>
+									<li><a href="right-sidebar.html">Web Development</a></li>
+									<li><a href="no-sidebar.html">Software & application</a></li>
+									<li><a href="no-sidebar.html">IOT Project</a></li>
+									<li><a href="no-sidebar.html">Other Project</a></li>
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">Testing Sample Project</a>
 										<ul>
 											<li><a href="#">Option 1</a></li>
 											<li><a href="#">Option 2</a></li>
@@ -38,8 +40,8 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="elements.html">Resrearch</a></li>
+							<li><a href="#" class="button primary">Contact US</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -48,9 +50,9 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2>HARSHANA JAYASEKARA</h2>
+							<p>Software developer & Devops Eng <br />
+								NSBM Green Uni Undrergraguate student</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
@@ -59,7 +61,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -91,7 +93,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Interdum amet non magna accumsan</h2>
@@ -107,7 +109,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Interdum felis blandit praesent sed augue</h2>
