--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Landed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>Harshana Jayasekara</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,10 +27,11 @@
 									<li>
 										<a href="#">Testing Sample Project</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="#">Testing 001</a></li>
+											<li><a href="#">Testing 002</a></li>
+											<li><a href="#">Testing 003</a></li>
+											<li><a href="#">Testing 004</a></li>
+											<li><a href="#">Testing 005</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -61,7 +57,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic01.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -93,7 +89,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic01.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/MASTER mONKEY.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Interdum amet non magna accumsan</h2>
@@ -109,7 +105,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic01.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/HDPackSuperiorWallpapers234_015.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Interdum felis blandit praesent sed augue</h2>
