--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         })
 
         var typed=new Typed(".input",{
-            strings:["Frontend Developer","UX Designer","Web Developer"],
+            strings:["Frontend Developer","UI/UX Designer","Web Developer","Mobile App Developer","Software Developer"],
             typedSpeed:70,
             backSpeed:55,
             loop:true
