--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </nav>
 
     <!-- Main Content Card (Home Section - Redesigned) -->
-    <main id="home-section" class="container-card w-full max-w-5xl p-8 md:p-12 rounded-2xl flex flex-col space-y-8">
+    <main id="home-section" class="container-card w-full max-w-5xl rounded-2xl flex flex-col space-y-8">
         <!-- Top Header Area -->
         
 
